--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -131,20 +131,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 30,
       "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
-        "outputId": "717d7bf6-8432-4656-faf7-3598c14b11f2"
+        "outputId": "d8084470-dc60-4c01-b874-eddec97c1973"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "59\n",
             "Between Quiet Room and Alarm Clock\n"
           ]
         }
@@ -152,7 +153,7 @@
       "source": [
         "#si-decibel\n",
         "\n",
-        "x = int(41)\n",
+        "x = int(input())\n",
         "\n",
         "if x < 40:\n",
         "  print(\"A Really Quiet Place\")\n",
@@ -531,14 +532,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
       "metadata": {
-        "id": "cc849af4-8f06-403d-a3a0-2869a742d58f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cc849af4-8f06-403d-a3a0-2869a742d58f",
+        "outputId": "a6440c6c-728f-4fe3-8347-fa309504bc9e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "422\n",
+            "412\n",
+            "402\n",
+            "392\n",
+            "382\n",
+            "372\n",
+            "362\n",
+            "352\n",
+            "342\n",
+            "332\n",
+            "322\n",
+            "312\n",
+            "302\n",
+            "292\n",
+            "282\n",
+            "272\n",
+            "262\n",
+            "252\n",
+            "242\n",
+            "232\n",
+            "222\n",
+            "212\n",
+            "202\n",
+            "192\n",
+            "182\n",
+            "172\n",
+            "162\n",
+            "152\n",
+            "142\n",
+            "132\n",
+            "122\n",
+            "112\n",
+            "102\n",
+            "92\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-while-loop"
+        "#si-while-loop\n",
+        "x = 432\n",
+        "\n",
+        "while  (x > 100):\n",
+        "    x -= 10\n",
+        "    print (x)\n"
       ]
     },
     {
@@ -559,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "a654076a-8571-406f-9d16-fa3911992de3",
       "metadata": {
         "id": "a654076a-8571-406f-9d16-fa3911992de3"
@@ -586,12 +637,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "e22bfd48-e02f-4284-8bf6-ee9e45932ba3",
       "metadata": {
-        "id": "e22bfd48-e02f-4284-8bf6-ee9e45932ba3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e22bfd48-e02f-4284-8bf6-ee9e45932ba3",
+        "outputId": "d377ce4d-9e77-4da6-8ccd-f5b6c5ef3224"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12.5663706"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ],
       "source": [
         "circumference(2)"
       ]
@@ -610,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "5eb74139-b605-4a34-815e-dd2afe5cd7da",
       "metadata": {
         "id": "5eb74139-b605-4a34-815e-dd2afe5cd7da"
@@ -637,12 +703,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "20912ec8-758f-41fe-8bd3-627e20868559",
       "metadata": {
-        "id": "20912ec8-758f-41fe-8bd3-627e20868559"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "20912ec8-758f-41fe-8bd3-627e20868559",
+        "outputId": "5b814c3a-a94c-444b-868f-489651abb01f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ],
       "source": [
         "factorial(5)"
       ]
@@ -661,14 +742,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
       "metadata": {
         "id": "c7b4c421-59d4-467d-8675-805b55715d7f"
       },
       "outputs": [],
       "source": [
-        "#si-prime"
+        "#si-prime\n",
+        "def isPrime (n):\n",
+        "  if n >= 1:\n",
+        "    return False\n",
+        "  for i in range (2,n):\n",
+        "    if n % i == 0:\n",
+        "      return (False)\n",
+        "  else:\n",
+        "    return (True)\n",
+        "\n"
       ]
     },
     {
@@ -694,7 +784,7 @@
       },
       "outputs": [],
       "source": [
-        "#si-taxi"
+        "#si-taxi\n"
       ]
     },
     {
