--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -777,14 +777,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0"
       },
       "outputs": [],
       "source": [
-        "#si-taxi\n"
+        "#si-taxi\n",
+        "def taxiPrice (distance):\n",
+        "  distance += 0.140\n",
+        "  return (4.00 + (distance * 0.25))"
       ]
     },
     {
@@ -840,14 +843,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
       "metadata": {
         "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0"
       },
       "outputs": [],
       "source": [
-        "#si-fibonacci"
+        "#si-fibonacci\n",
+        "def fib(n):\n",
+        "  if n==0:\n",
+        "    return 0\n",
+        "  elif n == 1:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return (fib(n-1) + fib(n-2))\n"
       ]
     },
     {
@@ -940,13 +950,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d",
       "metadata": {
         "tags": [],
-        "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "592e784a-e47c-45ef-9bcf-59fd5437e20d",
+        "outputId": "3491e301-f1be-4771-be43-ba4edbdab854"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on function factorial in module __main__:\n",
+            "\n",
+            "factorial(n)\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "help(factorial)"
       ]
@@ -975,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "id": "3fb1aba0-24c9-4e52-941d-dfd9345df62f",
       "metadata": {
         "id": "3fb1aba0-24c9-4e52-941d-dfd9345df62f"
