--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -777,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 78,
       "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
       "metadata": {
         "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0"
@@ -786,8 +786,7 @@
       "source": [
         "#si-taxi\n",
         "def taxiPrice (distance):\n",
-        "  distance += 0.140\n",
-        "  return (4.00 + (distance * 0.25))"
+        "    return (4.00 + (distance * 0.25)/0.140)"
       ]
     },
     {
